// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rubric has the correct score 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "description": "A description",
          "id": "2",
          "key": "2",
          "long_description": "A long description",
          "points": 10,
          "ratings": Array [
            Object {
              "description": "Lame",
              "id": "1",
              "points": 0,
            },
            Object {
              "description": "Lame",
              "id": "2",
              "points": 5,
            },
            Object {
              "description": "Lame",
              "id": "3",
              "points": 10,
            },
          ],
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={2}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <GradePicker
            assignmentID="1"
            courseID="1"
            drawerState={
              DrawerState {
                "currentSnap": 0,
                "deltaY": 0,
                "didSnapTo": [Function],
                "drawers": Array [],
                "snapTo": [Function],
              }
            }
            gradeSubmissionWithRubric={[Function]}
            navigator={
              Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "show": [Function],
                "traitCollection": [Function],
              }
            }
            rubricAssessment={
              Object {
                "1": Object {
                  "comments": "",
                  "points": 10,
                },
              }
            }
            rubricGradePending={false}
            rubricItems={
              Array [
                Object {
                  "description": "A description",
                  "id": "2",
                  "long_description": "A long description",
                  "points": 10,
                  "ratings": Array [
                    Object {
                      "description": "Lame",
                      "id": "1",
                      "points": 0,
                    },
                    Object {
                      "description": "Lame",
                      "id": "2",
                      "points": 5,
                    },
                    Object {
                      "description": "Lame",
                      "id": "3",
                      "points": 10,
                    },
                  ],
                },
              ]
            }
            rubricSettings={
              Object {
                "id": "1",
                "points_possible": 100,
                "title": "A possible item",
              }
            }
            submissionID="1"
            userID="1"
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 16,
                "paddingHorizontal": 16,
              }
            }
          >
            <View>
              <Text
                accessibilityTraits="header"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": ".SFUIDisplay-semibold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                Rubric
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                0 out of 100
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "overflow": "hidden",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            A description
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "marginBottom": 8,
                "marginTop": 12,
              }
            }
          >
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-3"
              value={10}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  10
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-2"
              value={5}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  5
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-1"
              value={0}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  0
                </Text>
              </View>
            </Button>
            <Button
              accessibilityLabel="Customize Grade"
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.customize-grade-2"
              value=""
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={1}
                />
              </View>
            </Button>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.add-comment-2"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Add Comment
              </Text>
            </Button>
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.description"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                View long description
              </Text>
            </Button>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Rubric renders a rubric 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "description": "A description",
          "id": "2",
          "key": "2",
          "long_description": "A long description",
          "points": 10,
          "ratings": Array [
            Object {
              "description": "Lame",
              "id": "1",
              "points": 0,
            },
            Object {
              "description": "Lame",
              "id": "2",
              "points": 5,
            },
            Object {
              "description": "Lame",
              "id": "3",
              "points": 10,
            },
          ],
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={2}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <GradePicker
            assignmentID="1"
            courseID="1"
            drawerState={
              DrawerState {
                "currentSnap": 0,
                "deltaY": 0,
                "didSnapTo": [Function],
                "drawers": Array [],
                "snapTo": [Function],
              }
            }
            gradeSubmissionWithRubric={[Function]}
            navigator={
              Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "show": [Function],
                "traitCollection": [Function],
              }
            }
            rubricAssessment={
              Object {
                "1": Object {
                  "comments": "",
                  "points": 10,
                },
              }
            }
            rubricGradePending={false}
            rubricItems={
              Array [
                Object {
                  "description": "A description",
                  "id": "2",
                  "long_description": "A long description",
                  "points": 10,
                  "ratings": Array [
                    Object {
                      "description": "Lame",
                      "id": "1",
                      "points": 0,
                    },
                    Object {
                      "description": "Lame",
                      "id": "2",
                      "points": 5,
                    },
                    Object {
                      "description": "Lame",
                      "id": "3",
                      "points": 10,
                    },
                  ],
                },
              ]
            }
            rubricSettings={
              Object {
                "id": "1",
                "points_possible": 100,
                "title": "A possible item",
              }
            }
            submissionID="1"
            userID="1"
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 16,
                "paddingHorizontal": 16,
              }
            }
          >
            <View>
              <Text
                accessibilityTraits="header"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": ".SFUIDisplay-semibold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                Rubric
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                10 out of 100
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "overflow": "hidden",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            A description
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "marginBottom": 8,
                "marginTop": 12,
              }
            }
          >
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-3"
              value={10}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  10
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-2"
              value={5}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  5
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-1"
              value={0}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  0
                </Text>
              </View>
            </Button>
            <Button
              accessibilityLabel="Customize Grade"
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.customize-grade-2"
              value=""
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={1}
                />
              </View>
            </Button>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.add-comment-2"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Add Comment
              </Text>
            </Button>
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.description"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                View long description
              </Text>
            </Button>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Rubric renders the comment input when openCommentKeyboard is called 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "description": "A description",
          "id": "2",
          "key": "2",
          "long_description": "A long description",
          "points": 10,
          "ratings": Array [
            Object {
              "description": "Lame",
              "id": "1",
              "points": 0,
            },
            Object {
              "description": "Lame",
              "id": "2",
              "points": 5,
            },
            Object {
              "description": "Lame",
              "id": "3",
              "points": 10,
            },
          ],
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={2}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <GradePicker
            assignmentID="1"
            courseID="1"
            drawerState={
              DrawerState {
                "currentSnap": 0,
                "deltaY": 0,
                "didSnapTo": [Function],
                "drawers": Array [],
                "snapTo": [Function],
              }
            }
            gradeSubmissionWithRubric={[Function]}
            navigator={
              Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "show": [Function],
                "traitCollection": [Function],
              }
            }
            rubricAssessment={
              Object {
                "1": Object {
                  "comments": "",
                  "points": 10,
                },
              }
            }
            rubricGradePending={false}
            rubricItems={
              Array [
                Object {
                  "description": "A description",
                  "id": "2",
                  "long_description": "A long description",
                  "points": 10,
                  "ratings": Array [
                    Object {
                      "description": "Lame",
                      "id": "1",
                      "points": 0,
                    },
                    Object {
                      "description": "Lame",
                      "id": "2",
                      "points": 5,
                    },
                    Object {
                      "description": "Lame",
                      "id": "3",
                      "points": 10,
                    },
                  ],
                },
              ]
            }
            rubricSettings={
              Object {
                "id": "1",
                "points_possible": 100,
                "title": "A possible item",
              }
            }
            submissionID="1"
            userID="1"
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 16,
                "paddingHorizontal": 16,
              }
            }
          >
            <View>
              <Text
                accessibilityTraits="header"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": ".SFUIDisplay-semibold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                Rubric
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                10 out of 100
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "overflow": "hidden",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            A description
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "marginBottom": 8,
                "marginTop": 12,
              }
            }
          >
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-3"
              value={10}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  10
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-2"
              value={5}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  5
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-1"
              value={0}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  0
                </Text>
              </View>
            </Button>
            <Button
              accessibilityLabel="Customize Grade"
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.customize-grade-2"
              value=""
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={1}
                />
              </View>
            </Button>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.add-comment-2"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Add Comment
              </Text>
            </Button>
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.description"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                View long description
              </Text>
            </Button>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "#F5F5F5",
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "overflow": "hidden",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "backgroundColor": "white",
            "borderColor": "#C7CDD1",
            "borderRadius": 20,
            "borderWidth": 0.5,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginLeft": 4,
            "overflow": "hidden",
          }
        }
      >
        <TextInput
          autoFocus={true}
          maxHeight={76}
          multiline={true}
          onChangeText={[Function]}
          placeholder="Comment"
          placeholderTextColor="#7F91A7"
          style={
            Object {
              "flex": 1,
              "fontSize": 16,
              "lineHeight": 19,
              "marginBottom": 6,
              "marginLeft": 10,
              "marginRight": 24,
              "marginTop": 2,
            }
          }
          testID="comment-input.comment"
          value=""
        />
        <Button
          accessibilityLabel="Send"
          containerStyle={
            Object {
              "alignItems": "center",
              "backgroundColor": "#374A59",
              "borderRadius": 12,
              "flex": 0,
              "height": 24,
              "justifyContent": "center",
              "marginRight": 4,
              "marginTop": 4,
              "width": 24,
            }
          }
          disabled={true}
          onPress={[Function]}
          testID="comment-input.send"
        >
          <Image
            source={1}
            style={
              Object {
                "marginBottom": 1,
                "tintColor": "white",
              }
            }
          />
        </Button>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
          },
          Object {
            "height": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Rubric renders the grade picker when there is no rubric 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={2}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <GradePicker
            assignmentID="1"
            courseID="1"
            drawerState={
              DrawerState {
                "currentSnap": 0,
                "deltaY": 0,
                "didSnapTo": [Function],
                "drawers": Array [],
                "snapTo": [Function],
              }
            }
            gradeSubmissionWithRubric={[Function]}
            navigator={
              Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "show": [Function],
                "traitCollection": [Function],
              }
            }
            rubricAssessment={
              Object {
                "1": Object {
                  "comments": "",
                  "points": 10,
                },
              }
            }
            rubricGradePending={false}
            rubricItems={null}
            rubricSettings={
              Object {
                "id": "1",
                "points_possible": 100,
                "title": "A possible item",
              }
            }
            submissionID="1"
            userID="1"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Rubric shows the activity indicator when saving a rubric score 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "description": "A description",
          "id": "2",
          "key": "2",
          "long_description": "A long description",
          "points": 10,
          "ratings": Array [
            Object {
              "description": "Lame",
              "id": "1",
              "points": 0,
            },
            Object {
              "description": "Lame",
              "id": "2",
              "points": 5,
            },
            Object {
              "description": "Lame",
              "id": "3",
              "points": 10,
            },
          ],
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={2}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <GradePicker
            assignmentID="1"
            courseID="1"
            drawerState={
              DrawerState {
                "currentSnap": 0,
                "deltaY": 0,
                "didSnapTo": [Function],
                "drawers": Array [],
                "snapTo": [Function],
              }
            }
            gradeSubmissionWithRubric={[Function]}
            navigator={
              Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "show": [Function],
                "traitCollection": [Function],
              }
            }
            rubricAssessment={
              Object {
                "1": Object {
                  "comments": "",
                  "points": 10,
                },
              }
            }
            rubricGradePending={true}
            rubricItems={
              Array [
                Object {
                  "description": "A description",
                  "id": "2",
                  "long_description": "A long description",
                  "points": 10,
                  "ratings": Array [
                    Object {
                      "description": "Lame",
                      "id": "1",
                      "points": 0,
                    },
                    Object {
                      "description": "Lame",
                      "id": "2",
                      "points": 5,
                    },
                    Object {
                      "description": "Lame",
                      "id": "3",
                      "points": 10,
                    },
                  ],
                },
              ]
            }
            rubricSettings={
              Object {
                "id": "1",
                "points_possible": 100,
                "title": "A possible item",
              }
            }
            submissionID="1"
            userID="1"
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 16,
                "paddingHorizontal": 16,
              }
            }
          >
            <View>
              <Text
                accessibilityTraits="header"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": ".SFUIDisplay-semibold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                Rubric
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                10 out of 100
              </Text>
            </View>
            <ActivityIndicator
              animating={true}
              color="#999999"
              hidesWhenStopped={true}
              size="small"
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "overflow": "hidden",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            A description
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "marginBottom": 8,
                "marginTop": 12,
              }
            }
          >
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-3"
              value={10}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  10
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-2"
              value={5}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  5
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-1"
              value={0}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  0
                </Text>
              </View>
            </Button>
            <Button
              accessibilityLabel="Customize Grade"
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.customize-grade-2"
              value=""
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={1}
                />
              </View>
            </Button>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.add-comment-2"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Add Comment
              </Text>
            </Button>
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.description"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                View long description
              </Text>
            </Button>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Rubric shows the save button when there is a change in the rubric score 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "description": "A description",
          "id": "2",
          "key": "2",
          "long_description": "A long description",
          "points": 10,
          "ratings": Array [
            Object {
              "description": "Lame",
              "id": "1",
              "points": 0,
            },
            Object {
              "description": "Lame",
              "id": "2",
              "points": 5,
            },
            Object {
              "description": "Lame",
              "id": "3",
              "points": 10,
            },
          ],
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={2}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={undefined}
    removeClippedSubviews={true}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <GradePicker
            assignmentID="1"
            courseID="1"
            drawerState={
              DrawerState {
                "currentSnap": 0,
                "deltaY": 0,
                "didSnapTo": [Function],
                "drawers": Array [],
                "snapTo": [Function],
              }
            }
            gradeSubmissionWithRubric={[Function]}
            navigator={
              Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "show": [Function],
                "traitCollection": [Function],
              }
            }
            rubricAssessment={
              Object {
                "1": Object {
                  "comments": "",
                  "points": 10,
                },
              }
            }
            rubricGradePending={false}
            rubricItems={
              Array [
                Object {
                  "description": "A description",
                  "id": "2",
                  "long_description": "A long description",
                  "points": 10,
                  "ratings": Array [
                    Object {
                      "description": "Lame",
                      "id": "1",
                      "points": 0,
                    },
                    Object {
                      "description": "Lame",
                      "id": "2",
                      "points": 5,
                    },
                    Object {
                      "description": "Lame",
                      "id": "3",
                      "points": 10,
                    },
                  ],
                },
              ]
            }
            rubricSettings={
              Object {
                "id": "1",
                "points_possible": 100,
                "title": "A possible item",
              }
            }
            submissionID="1"
            userID="1"
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 16,
                "paddingHorizontal": 16,
              }
            }
          >
            <View>
              <Text
                accessibilityTraits="header"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": ".SFUIDisplay-semibold",
                      "fontSize": 20,
                    },
                    undefined,
                  ]
                }
              >
                Rubric
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969E",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                  ]
                }
              >
                10 out of 100
              </Text>
            </View>
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 18,
                  "fontWeight": "600",
                }
              }
              testID="rubric-details.save"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 18,
                        "fontWeight": "600",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Save
              </Text>
            </Button>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "overflow": "hidden",
              "paddingBottom": 8,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            A description
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
                "marginBottom": 8,
                "marginTop": 12,
              }
            }
          >
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-3"
              value={10}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  10
                </Text>
              </View>
            </Button>
            <Button
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-2"
              value={5}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "black",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  5
                </Text>
              </View>
            </Button>
            <Button
              on={true}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.points-1"
              value={0}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                    Object {
                      "backgroundColor": "#374A59",
                    },
                  ]
                }
              >
                <Text
                  accessibilityTraits="header"
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": ".SFUIDisplay-semibold",
                        "fontSize": 20,
                      },
                      Object {
                        "color": "white",
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  0
                </Text>
              </View>
            </Button>
            <Button
              accessibilityLabel="Customize Grade"
              on={false}
              onPress={[Function]}
              style={
                Object {
                  "marginBottom": 8,
                  "marginRight": 8,
                }
              }
              testID="rubric-item.customize-grade-2"
              value=""
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderColor": "#C7CDD1",
                      "borderRadius": 24,
                      "borderWidth": 0.5,
                      "flex": 1,
                      "height": 48,
                      "justifyContent": "center",
                      "minWidth": 48,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "marginBottom": 8,
                      "marginRight": 8,
                    },
                  ]
                }
              >
                <Image
                  source={1}
                />
              </View>
            </Button>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.add-comment-2"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                Add Comment
              </Text>
            </Button>
            <Button
              onPress={[Function]}
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                  "paddingRight": 16,
                }
              }
              testID="rubric-item.description"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-bold",
                      },
                      Object {
                        "color": "#374A59",
                      },
                      Object {
                        "fontSize": 14,
                        "fontWeight": "500",
                        "paddingRight": 16,
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-medium",
                    },
                  ]
                }
              >
                View long description
              </Text>
            </Button>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
